test/types/scalar/bradc/bitNegateBoolParam.good
bitNegateBoolParam.chpl:4: error: ~ is not supported on operands of boolean type
