test/types/scalar/bradc/bitNegateBoolParam.chpl
param t: bool = true;
param f: bool = true;

writeln("~true = ", ~t);
writeln("~false = ", ~f);
